test/Fail/Issue1209-3.agda
-- This combination should not be allowed:

{-# OPTIONS --guardedness --sized-types --safe #-}
