test/Fail/Issue1209-3.err
Issue1209-3.agda:3,1-51: error: [OptionError]
Option --safe cannot be combined with option --sized-types
